--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
+* {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  padding: 0;
+  box-sizing: border-box;
+  color: #a0a0a9;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  a {
+    text-decoration: none;
+    font-family: "PT Sans", sans-serif;
+  }
 }
