--- a/src/components/Signup/signup.module.css
+++ b/src/components/Signup/signup.module.css
@@ -4,7 +4,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    p {
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
+    }
 }
+
 .signupPageBox {
     border: 1px solid #a0a0a9;
     border-radius: 4px;
